--- a/Smooth Manifolds/Smooth Manifolds.tex
+++ b/Smooth Manifolds/Smooth Manifolds.tex
@@ -111,6 +111,10 @@
 
 \include{chapters/ch13/differential forms}
 
+\include{chapters/ch14/orientations}
+
+%\include{chapters/ch15/integration on manifolds}
+
 \chapter{指数映射}
 
 \section{单参数子群和指数映射}
